[package]
name = "hermod"
version = "0.1.0"
authors = ["Steven Stanfield <stanfield@scarecrowtech.com>"]
edition = "2018"

[dependencies]
romio = { git = "https://github.com/withoutboats/romio" }
rand = "0.6.5"
bytes="0.4"
serde="1.0"
serde_json="1.0"
serde_derive="1.0"
log="0.4"

[dependencies.futures]
version = "0.3.0-alpha.16"
package = "futures-preview"
