[package]
name = "hermod"
version = "0.1.0"
authors = ["Steven Stanfield <stanfield@scarecrowtech.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1.41.1", features = [
    "net",
    "io-util",
    "rt",
    "rt-multi-thread",
    "macros",
    "signal",
] }
bytes = "1.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
libc = "0.2"
crc = "3.2.1"
#ctrlc = { version = "3.4.5", features = ["termination"] }
common = { path = "../common" }
futures = { version = "0.3.31" }

[build-dependencies]
chrono = "0.4.38"
