[package]
name = "client_async"
version = "0.1.0"
authors = ["Steven Stanfield <stanfield@scarecrowtech.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
romio = { git = "https://github.com/withoutboats/romio" }
bytes="0.4"
serde="1.0"
serde_json="1.0"
serde_derive="1.0"
log="0.4"
crc = "^1.0.0"
common = { path = "../common" }

[dependencies.futures]
version = "0.3.0-alpha.17"
package = "futures-preview"

[build-dependencies]
chrono = "0.4.7"
