[package]
name = "common"
version = "0.1.0"
authors = ["Steven Stanfield <stanfield@scarecrowtech.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
