[package]
name = "test_client"
version = "0.1.0"
authors = ["Steven Stanfield <stanfield@scarecrowtech.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1.41.1", features = [
    "net",
    "io-util",
    "rt",
    "rt-multi-thread",
    "macros",
] }
bytes = "1.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
crc = "3.2.1"
client_async = { path = "../client_async" }
common = { path = "../common" }
futures = { version = "0.3.31" }

[build-dependencies]
chrono = "0.4.7"
